fixed the horizontal scroll for overflow for the images on the portfolio page

--- a/styles/about.css
+++ b/styles/about.css
@@ -441,10 +441,12 @@ footer {
 
 
 /* this is between tablet and desktop minor changes ======================================================== */
-@media screen and (min-width: 1439px) and (max-width: 1700px) {
+@media screen and (min-width: 1440px) and (max-width: 1700px) {
     .sideways-title {
         left: -120px;
+       
     }
+   
 }
 
 
@@ -468,9 +470,9 @@ footer {
     
 
     .sideways-title {
-        left: -130px;
-        width: 350px;
-        bottom: -40px;
+        left: -210px;
+        width: max-content;
+        bottom: -100px;
         gap: 85px;
     }
 
